// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`from > from(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be even, got: -1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(-2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-2
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
-2
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(-3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be even, got: -3
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(-4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-4
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
-4
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be even, got: 1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
2
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(2.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2.1
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be an integer, got: 2.1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(2.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2.5
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be an integer, got: 2.5
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be even, got: 3
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
4
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
4
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(100) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
100
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
100
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(Infinity) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Infinity
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be an integer, got: Infinity
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(NaN) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
NaN
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be an integer, got: NaN
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is('2') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-2
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-4
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(2.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2.1
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(2.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2.5
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
4
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(100) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
100
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(Infinity) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Infinity
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(NaN) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
NaN
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-2
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
-2
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-4
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
-4
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
2
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(2.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2.1
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(2.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2.5
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
4
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
4
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(100) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
100
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
100
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(Infinity) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Infinity
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(NaN) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
NaN
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;
